# fossdb

./: .env.example  Cargo.toml  docker-compose.yml  nginx.conf  shell.nix
fossdb/: Cargo.toml  Dockerfile
fossdb-api/: Cargo.toml  Dockerfile
fossdb-api/src/: auth.rs  config.rs  db.rs  main.rs  models.rs
fossdb-api/src/handlers/: auth.rs  packages.rs  users.rs
fossdb-client/: Cargo.toml  Dioxus.toml  index.html
fossdb-client/src/: lib.rs  main.rs
fossdb-client/src/api/: client.rs
fossdb-client/src/components/: mod.rs
fossdb-client/src/hooks/: auth.rs  notifications.rs  scroll.rs  storage.rs  time_ago.rs
fossdb-client/src/pages/: home.rs  mod.rs
fossdb-frontend/: Cargo.toml  Dioxus.toml  index.html
fossdb-frontend/src/: main.rs  styles.css
fossdb-frontend/src/components/: buttons.rs  comparison.rs  modals.rs
fossdb-frontend/src/hooks/: keyboard.rs  mod.rs  websocket.rs
fossdb-frontend/src/pages/: api_docs.rs  packages.rs  subscriptions.rs
fossdb-worker/: Cargo.toml  Dockerfile
fossdb-worker/src/: config.rs  db.rs  main.rs  models.rs  package_coordinator.rs
fossdb-worker/src/scrapers/: crates_io.rs  libraries_io.rs  mod.rs  nixpkgs.rs
fossdb/src/: auth.rs  client.rs  collector_models.rs  config.rs  db.rs  db_listener.rs  email.rs  id_generator.rs  lib.rs  main.rs  middleware.rs  models.rs  notifications.rs  scraper_models.rs  websocket.rs
fossdb/src/collectors/: crates_io.rs  helpers.rs  libraries_io.rs  mod.rs  nixpkgs.rs
fossdb/src/handlers/: analytics.rs  auth.rs  mod.rs  packages.rs  users.rs
fossdb/src/scrapers/: crates_io.rs  libraries_io.rs  npm.rs
frontend/: add-package-form.html  app.js  config.js  index.html
frontend-dioxus/: Cargo.toml  Dioxus.toml
frontend-dioxus/src/: lib.rs
frontend-dioxus/src/api/: client.rs  types.rs
frontend-dioxus/src/components/: cards.rs  mod.rs  modals.rs  navigation.rs  notifications.rs
frontend-dioxus/src/hooks/: auth.rs  scroll.rs  storage.rs  time_ago.rs  websocket.rs
frontend-dioxus/src/pages/: package_detail.rs  packages.rs
