[package]
name = "fossdb-client"
description = "FossDB client"
version.workspace = true
edition.workspace = true
authors = ["cilki"]
repository = "https://github.com/fossable/fossdb/"
license = "Unlicense"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dioxus-logger = "0.7.2"
dioxus = { version = "0.7.2", features = ["web", "router"] }
fossdb = { path = "../fossdb", version = "0.0.1", default-features = false }
futures.workspace = true
gloo-console = "0.3"
gloo-net = { version = "0.6", features = ["websocket"] }
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
serde_json.workspace = true
serde-wasm-bindgen = "0.6"
serde.workspace = true
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Window",
  "Location",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Headers",
] }
