[package]
name = "fossdb-frontend"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fossdb = { path = "../fossdb", default-features = false }
dioxus = { version = "0.7.2", features = ["web", "router"] }
dioxus-logger = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-net = { version = "0.6", features = ["websocket"] }
futures = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Window",
  "Location",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Headers",
] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
gloo-console = "0.3"
anyhow = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
