[package]
name = "fossdb"
version = "0.0.1"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.17.1"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
reqwest = { version = "0.12.28", default-features = false, features = [
  "json",
  "rustls-tls",
] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
regex = "1.0"
semver = "1.0"
async-trait = "0.1"
tokio-util = "0.7"
futures = "0.3"
native_db = "0.8.2"
native_model = "0.4.20"
once_cell = "1.19"
governor = "0.7"
crates_io_api = { version = "0.12", default-features = false, features = ["rustls"] }
clap = { version = "4.5", features = ["derive"] }
